trying to fix npm run dev

--- a/bellafleurs/tsconfig.json
+++ b/bellafleurs/tsconfig.json
@@ -34,14 +34,17 @@
     "noImplicitReturns": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": false,
-    "noUncheckedIndexedAccess": false
+    "noUncheckedIndexedAccess": false,
+    "allowSyntheticDefaultImports": true,
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
+    ".next/types/**/*.ts",
+    "src/types/next-auth.d.ts"
+, "next.config.js"  ],
   "exclude": [
     "node_modules"
   ]
