--- a/bellafleurs/package.json
+++ b/bellafleurs/package.json
@@ -8,13 +8,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit",
-    "db:seed": "tsx lib/seed.ts",
-    "db:reset": "tsx lib/reset-db.ts"
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^3.10.0",
     "@hookform/resolvers": "^3.9.0",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@types/bcryptjs": "^2.4.6",
@@ -28,9 +26,10 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.7",
     "lucide-react": "^0.451.0",
+    "mongodb": "^5.9.2",
     "mongoose": "^8.7.1",
     "next": "14.2.15",
-    "next-auth": "^5.0.0-beta.29",
+    "next-auth": "^4.24.8",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -53,18 +52,5 @@
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
-  },
-  "keywords": [
-    "nextjs",
-    "ecommerce",
-    "flowers",
-    "mongodb",
-    "stripe",
-    "typescript"
-  ],
-  "author": "Bella Fleurs Team",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ton-username/bella-fleurs.git"
   }
 }
