--- a/bellafleurs/tsconfig.json
+++ b/bellafleurs/tsconfig.json
@@ -24,7 +24,7 @@
       "@/components/*": ["./src/components/*"],
       "@/lib/*": ["./src/lib/*"],
       "@/models/*": ["./src/models/*"],
-      "@/types/*": ["./src/types/*"],
+      "@/types/*": ["types/*"],
       "@/utils/*": ["./src/lib/utils/*"],
       "@/app/*": ["./src/app/*"],
       "@/public/*": ["./public/*"]
@@ -36,14 +36,14 @@
     "noPropertyAccessFromIndexSignature": false,
     "noUncheckedIndexedAccess": false,
     "allowSyntheticDefaultImports": true,
-    "typeRoots": ["./node_modules/@types", "./src/types"]
+    "typeRoots": ["./node_modules/@types", "types"]
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/types/next-auth.d.ts"
+    "types/next-auth.d.ts"
 , "next.config.js"  ],
   "exclude": [
     "node_modules"
