--- a/bellafleurs/package.json
+++ b/bellafleurs/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -37,7 +38,9 @@
     "sharp": "^0.33.5",
     "sonner": "^1.5.0",
     "stripe": "^17.2.1",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.14",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.3",
     "zod": "^3.23.8"
   },
