--- a/bellafleurs/package.json
+++ b/bellafleurs/package.json
@@ -8,14 +8,16 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "seed:admin": "tsx scripts/seed-admin.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.14",
     "@tailwindcss/forms": "^0.5.9",
@@ -30,12 +32,14 @@
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.2",
     "framer-motion": "^11.11.7",
     "lucide-react": "^0.451.0",
     "mongodb": "^5.9.2",
     "mongoose": "^8.7.1",
     "next": "14.2.15",
     "next-auth": "^4.24.8",
+    "nodemailer": "^7.0.6",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -51,11 +55,12 @@
   },
   "devDependencies": {
     "@types/mongodb": "^4.0.7",
+    "@types/nodemailer": "^7.0.1",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.15",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
-    "tsx": "^4.19.1"
+    "tsx": "^4.20.5"
   },
   "engines": {
     "node": ">=18.0.0",
