--- a/bellafleurs/package.json
+++ b/bellafleurs/package.json
@@ -37,6 +37,7 @@
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dns": "^0.2.2",
     "dotenv": "^17.2.2",
     "framer-motion": "^11.11.7",
     "lucide-react": "^0.451.0",
