--- a/bellafleurs/public/manifest.json
+++ b/bellafleurs/public/manifest.json
@@ -6,20 +6,7 @@
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#16a34a",
-  "icons": [
-    {
-      "src": "/images/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/images/icon-512.png", 
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ],
+  "icons": [],
   "categories": ["lifestyle", "shopping"],
   "lang": "fr",
   "dir": "ltr",
