updateed detail product page

--- a/bellafleurs/public/manifest.json
+++ b/bellafleurs/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Bella Fleurs",
   "short_name": "Bella Fleurs",
-  "description": "Créations florales d'exception à Paris - Bouquets, compositions et arrangements sur mesure",
+  "description": "Fleuriste à Brétigny-sur-Orge",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
