--- a/bellafleurs/package.json
+++ b/bellafleurs/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
@@ -42,6 +43,7 @@
     "dns": "^0.2.2",
     "dotenv": "^17.2.2",
     "framer-motion": "^11.11.7",
+    "html-pdf-node": "^1.0.8",
     "lucide-react": "^0.451.0",
     "mongodb": "^5.9.2",
     "mongoose": "^8.7.1",
